--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,23 +12,19 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    
-uses: actions/checkout@v3
-    name: Checkout code
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    
-name: Set up JDK 17
-    uses: actions/setup-java@v3
-    with:
-      java-version: '17'
-      distribution: 'adopt'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
 
-    
-name: Build
-    run: ./gradlew build
-    shell: bash
+      - name: Build
+        run: ./gradlew build
+        shell: bash
 
-    
-name: Test
-    run: ./gradlew test
-    shell: bash
+      - name: Test
+        run: ./gradlew test
+        shell: bash
