--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,30 +1,32 @@
-name: workflow principal de cicd
+name: "Workflow principal de CI/CD"
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      
+main
 
 jobs:
-  build_and_test:
-    name: Build and Test
-    runs-on: windows-latest
+  test_build:
+    name: "Test et Build"
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      
+name: Checkout du code
+      uses: actions/checkout@v3  # Utilisation de l'action GitHub pour récupérer le code du dépôt
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'adopt'
+      
+name: Setup Java
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'  # Version Java à utiliser
+        distribution: 'adopt'  # Distribution d'AdoptOpenJDK
 
-      - name: Build
-        run: ./gradlew build
-        shell: bash
+      
+name: Build du projet
+      run: ./gradlew build
 
-      - name: Test
-        run: ./gradlew test
-        shell: bash
+      
+name: Exécuter les tests
+      run: ./gradlew test
