--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,9 +2,8 @@ name: "Workflow principal de CI/CD"
 
 on:
   push:
-    branches:
-      
-main
+    branches: 
+      - main
 
 jobs:
   test_build:
